--- a/static/theme/style.css
+++ b/static/theme/style.css
@@ -15,7 +15,21 @@ hr { display: none; }
 
 /* Header */
 #header {
-	margin-bottom: 1em;
+	display: inline;
+	position: relative;
+	top: 0.5em;
+	margin: 1em 0 1em 0;
+	}
+
+#desc {
+	position: relative;
+	top: 0.75em;
+	font-size: 1.1em;
+	}
+
+/* Content */
+#content {
+	margin-top: 3em;
 	}
 
 /* Post display */
