--- a/static/theme/style.css
+++ b/static/theme/style.css
@@ -46,6 +46,13 @@ hr { display: none; }
 	border-bottom: 1px solid #cdcdcd;
 	}
 
+.post-author {
+	margin-left: 1em;
+	padding-bottom: 1em;
+	font-size: 0.8em;
+        border-bottom: 1px solid #cdcdcd;
+	}
+
 .post-content {
 	margin-top: 2em;
 	}
@@ -61,7 +68,6 @@ hr { display: none; }
 
 /* Footer */
 #footer {
-	padding-top: 2em;
 	color: #afafaf;
 	text-align: right;
 	}
