--- a/static/themes/dark/style.css
+++ b/static/themes/dark/style.css
@@ -80,7 +80,7 @@ hr { display: none; }
 	border-bottom: 1px solid #42444a;
 	}
 
-.post-author {
+.post-date, .post-author {
 	margin-left: 1em;
 	padding-bottom: 1em;
 	font-size: 0.8em;
